Bug 631812 - URLBar broken on certain themes; r=gavin a=blocking-final+
UltraBlame original commit: 5c77943a504d44f99c6a694e2f9fc0aa913f485b

--- a/browser/themes/winstripe/browser/browser.css
+++ b/browser/themes/winstripe/browser/browser.css
@@ -9141,6 +9141,23 @@ align
 stretch
 ;
 }
+.
+urlbar
+-
+textbox
+-
+container
+{
+-
+moz
+-
+box
+-
+align
+:
+stretch
+;
+}
 #
 urlbar
 -
